mobile-app1 page section added

--- a/pages/mobile-app1.html
+++ b/pages/mobile-app1.html
@@ -591,15 +591,133 @@
     <!-- banner end -->
 
     <!-- steps start -->
-    <section>
+    <section class="py-10 lg:py-16">
       <div class="container">
         <div class="text-center pb-14">
-          <h2 class="text-5xl text-gray-900 font-bold font-sfBold">Get Started with 4 Easy Steps</h2>
-          <p class="pt-6 text-base text-gray-600 max-w-[608px] mx-auto">We will help to develop every smallest thing into a big one for your company We will help to develop every smallest thing into a big one for</p>
+          <h2 class="text-2xl lg:text-5xl text-gray-900 font-bold font-sfBold">Get Started with 4 Easy Steps</h2>
+          <p class="pt-4 lg:pt-6 text-sm lg:text-base text-gray-600 max-w-[608px] mx-auto">We will help to develop every smallest thing into a big one for your company We will help to develop every smallest thing into a big one for</p>
+        </div>
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+          <!-- item 1 -->
+          <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+            <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+              <img src="../src/images/icons/comment.svg" alt="">
+            </div>
+            <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">Download Apps</h5>
+            <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+          </div>
+
+          <!-- item 2 -->
+          <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+            <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+              <img src="../src/images/icons/assessment.svg" alt="">
+            </div>
+            <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">Create Account</h5>
+            <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+          </div>
+
+          <!-- item 3 -->
+          <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+            <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+              <img src="../src/images/icons/calendar_today.svg" alt="">
+            </div>
+            <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">Fund Deposit</h5>
+            <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+          </div>
+
+          <!-- item 4 -->
+          <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+            <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+              <img src="../src/images/icons/folder.svg" alt="">
+            </div>
+            <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">Start Investing</h5>
+            <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+          </div>
+
         </div>
       </div>
     </section>
     <!-- steps end -->
+
+    <!-- why-us start -->
+    <section class="py-10 lg:py-16">
+      <div class="container">
+        <div class="text-center pb-14">
+          <h2 class="text-2xl lg:text-5xl text-gray-900 font-bold font-sfBold">Why Choose Us?</h2>
+          <p class="pt-4 lg:pt-6 text-sm lg:text-base text-gray-600 max-w-[608px] mx-auto">We will help to develop every smallest thing into a big one for your company We will help to develop every smallest thing into a big one for</p>
+        </div>
+
+        <div class="grid grid-cols-12 items-center gap-6">
+          <div class="col-span-12 lg:col-span-4 xl:col-span-3 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-1 gap-6">
+            <!-- item 1 -->
+            <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+              <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+                <img src="../src/images/icons/folder.svg" alt="">
+              </div>
+              <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">More Informative</h5>
+              <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+            </div>
+
+            <!-- item 2 -->
+            <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+              <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+                <img src="../src/images/icons/folder.svg" alt="">
+              </div>
+              <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">Great Apps UI/UX</h5>
+              <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+            </div>
+
+          </div>
+
+          <div class="col-span-4 xl:col-span-6 hidden lg:block">
+            <img src="../src/images/mobile/iphone-mochup.png" alt="" class="mx-auto">
+          </div>
+
+          <div class="col-span-12 lg:col-span-4 xl:col-span-3 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-1 gap-6">
+            <!-- item 3 -->
+            <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+              <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+                <img src="../src/images/icons/folder.svg" alt="">
+              </div>
+              <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">Fast Performance</h5>
+              <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+            </div>
+
+            <!-- item 4 -->
+            <div class="rounded-2xl px-3 py-6 lg:p-6 text-center border border-gray-300 transition-all duration-300 hover:border-white hover:shadow-[0px_16px_40px_0px_rgba(60,111,140,0.12)]">
+              <div class="h-14 w-14 rounded-lg flex items-center justify-center bg-primary-900/20 mx-auto">
+                <img src="../src/images/icons/folder.svg" alt="">
+              </div>
+              <h5 class="pt-6 pb-4 text-xl lg:text-2xl font-sfBold font-bold text-gray-900">More Secure</h5>
+              <p class="text-sm lg:text-base text-gray-600">Lorem ipsum dolor sitam et, consectetur adip is cing elit, sed do eius mod tempor incidi dunt ut labore et</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- why-us end -->
+
+    <!-- trading start -->
+    <section class="py-10 lg:py-16 xl:py-32 relative">
+      <div class="container relative">
+        <img src="../src/images/mobile/ornament-1.png" alt="" class="absolute -top-14 -left-16 hidden lg:block">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 items-center">
+          <div class="rounded-2xl overflow-hidden">
+            <img src="../src/images/mobile/trading.png" alt="" class="w-full">
+          </div>
+
+          <div class="lg:p-4">
+            <h2 class="text-2xl lg:text-3xl xl:text-5xl font-bold font-sfBold text-gray-900 pb-6 lg:pb-8">Trading is now easy and secure with us</h2>
+            <p class="text-sm lg:text-base text-gray-600 pb-4">Lorem ipsum dolor sit amet consectetur. Ac vel ut nunc purus tortor. Leo ac mi sed at aliquet turpis feugiat ac et. Consequat eu pulvinar dui dui felis. Non lacinia proin ac purus pharetra id pellentesque diam faucibus. Ac fermentum ac semper feugiat</p>
+            <p class="text-sm lg:text-base text-gray-600">urna sit nulla. Donec sollicitudin ultrices quisque habitasse pellentesque sit sed aliquet a. Sit luctus aliquam imperdiet nulla felis quis at.</p>
+            <a href="#" class="inline-block py-[14px] px-6 text-sm font-bold font-sfBold rounded-lg bg-primary text-white mt-10 xl:mt-16">Read More</a>
+          </div>
+        </div>
+      </div>
+      <img src="../src/images/mobile/ornament-2.png" alt="" class="absolute bottom-20 right-0 hidden lg:block">
+    </section>
+    <!-- trading end -->
   </main>
   <!-- main end -->
  
