--- a/pages/mobile-app1.html
+++ b/pages/mobile-app1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cubeicals | Mobile App Showcase 1</title>
+  <title>Cubeicals | Mobile App Showcase Version 1</title>
 
   <!-- phosphor icon -->
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
