--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
 
                 <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
                   <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
-                    <img src="src/images/avatar/avatar-4.png" alt="" class="w-full">
+                    <img src="src/images/avatar/avatar-15.png" alt="" class="w-full">
                   </div>
                   <div>
                     <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
@@ -898,7 +898,7 @@
 
                 <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
                   <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
-                    <img src="src/images/avatar/avatar-5.png" alt="" class="w-full">
+                    <img src="src/images/avatar/avatar-16.png" alt="" class="w-full">
                   </div>
                   <div>
                     <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
@@ -929,7 +929,7 @@
 
                 <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
                   <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
-                    <img src="src/images/avatar/avatar-1.png" alt="" class="w-full">
+                    <img src="src/images/avatar/avatar-17.png" alt="" class="w-full">
                   </div>
                   <div>
                     <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
@@ -960,7 +960,7 @@
 
                 <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
                   <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
-                    <img src="src/images/avatar/avatar-2.png" alt="" class="w-full">
+                    <img src="src/images/avatar/avatar-18.png" alt="" class="w-full">
                   </div>
                   <div>
                     <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
@@ -970,6 +970,162 @@
               </div>
             </div>
           </div>
+
+          <!-- item 8 -->
+          <div class="swiper-slide">
+            <div class="overflow-hidden featured-blog-card rounded-lg">
+              <div class="w-full h-[300px] relative">
+                <img src="src/images/featured/blog-5.png" alt="" class="w-full h-full object-cover">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                  <i class="ph ph-bookmark-simple text-primary-900"></i>
+                </button>
+              </div>
+
+              <div class="p-4">
+                <div class="flex items-center justify-between">
+                  <span class="inline-block text-secondary text-sm font-sfBold font-bold py-[2px] px-1">#Nature</span>
+                  <p class="text-xs md:text-sm text-gray-600">May 19, 2021</p>
+                </div>
+
+                <a href="#" class="block mt-2 mb-4 md:mb-6 text-base md:text-xl font-sfBold font-bold text-gray-900">Nature Connection Exercise – Perceive and Receive</a>
+
+                <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
+                  <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
+                    <img src="src/images/avatar/avatar-19.png" alt="" class="w-full">
+                  </div>
+                  <div>
+                    <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
+                    <p class="text-gray-600 text-xs md:text-sm">Deputy Director</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- item 9 -->
+          <div class="swiper-slide">
+            <div class="overflow-hidden featured-blog-card rounded-lg">
+              <div class="w-full h-[300px] relative">
+                <img src="src/images/featured/blog-4.png" alt="" class="w-full h-full object-cover">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                  <i class="ph ph-bookmark-simple text-primary-900"></i>
+                </button>
+              </div>
+
+              <div class="p-4">
+                <div class="flex items-center justify-between">
+                  <span class="inline-block text-secondary text-sm font-sfBold font-bold py-[2px] px-1">#Nature</span>
+                  <p class="text-xs md:text-sm text-gray-600">May 19, 2021</p>
+                </div>
+
+                <a href="#" class="block mt-2 mb-4 md:mb-6 text-base md:text-xl font-sfBold font-bold text-gray-900">Nature Connection Exercise – Perceive and Receive</a>
+
+                <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
+                  <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
+                    <img src="src/images/avatar/avatar-20.png" alt="" class="w-full">
+                  </div>
+                  <div>
+                    <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
+                    <p class="text-gray-600 text-xs md:text-sm">Deputy Director</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- item 10 -->
+          <div class="swiper-slide">
+            <div class="overflow-hidden featured-blog-card rounded-lg">
+              <div class="w-full h-[300px] relative">
+                <img src="src/images/featured/blog-3.png" alt="" class="w-full h-full object-cover">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                  <i class="ph ph-bookmark-simple text-primary-900"></i>
+                </button>
+              </div>
+
+              <div class="p-4">
+                <div class="flex items-center justify-between">
+                  <span class="inline-block text-secondary text-sm font-sfBold font-bold py-[2px] px-1">#Nature</span>
+                  <p class="text-xs md:text-sm text-gray-600">May 19, 2021</p>
+                </div>
+
+                <a href="#" class="block mt-2 mb-4 md:mb-6 text-base md:text-xl font-sfBold font-bold text-gray-900">Nature Connection Exercise – Perceive and Receive</a>
+
+                <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
+                  <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
+                    <img src="src/images/avatar/avatar-21.png" alt="" class="w-full">
+                  </div>
+                  <div>
+                    <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
+                    <p class="text-gray-600 text-xs md:text-sm">Deputy Director</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- item 11 -->
+          <div class="swiper-slide">
+            <div class="overflow-hidden featured-blog-card rounded-lg">
+              <div class="w-full h-[300px] relative">
+                <img src="src/images/featured/blog-2.png" alt="" class="w-full h-full object-cover">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                  <i class="ph ph-bookmark-simple text-primary-900"></i>
+                </button>
+              </div>
+
+              <div class="p-4">
+                <div class="flex items-center justify-between">
+                  <span class="inline-block text-secondary text-sm font-sfBold font-bold py-[2px] px-1">#Nature</span>
+                  <p class="text-xs md:text-sm text-gray-600">May 19, 2021</p>
+                </div>
+
+                <a href="#" class="block mt-2 mb-4 md:mb-6 text-base md:text-xl font-sfBold font-bold text-gray-900">Nature Connection Exercise – Perceive and Receive</a>
+
+                <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
+                  <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
+                    <img src="src/images/avatar/avatar-22.png" alt="" class="w-full">
+                  </div>
+                  <div>
+                    <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
+                    <p class="text-gray-600 text-xs md:text-sm">Deputy Director</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- item 12 -->
+          <div class="swiper-slide">
+            <div class="overflow-hidden featured-blog-card rounded-lg">
+              <div class="w-full h-[300px] relative">
+                <img src="src/images/featured/blog-6.png" alt="" class="w-full h-full object-cover">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                  <i class="ph ph-bookmark-simple text-primary-900"></i>
+                </button>
+              </div>
+
+              <div class="p-4">
+                <div class="flex items-center justify-between">
+                  <span class="inline-block text-secondary text-sm font-sfBold font-bold py-[2px] px-1">#Nature</span>
+                  <p class="text-xs md:text-sm text-gray-600">May 19, 2021</p>
+                </div>
+
+                <a href="#" class="block mt-2 mb-4 md:mb-6 text-base md:text-xl font-sfBold font-bold text-gray-900">Nature Connection Exercise – Perceive and Receive</a>
+
+                <div class="flex items-center gap-4 border-t border-gray-300 pt-4 md:pt-6">
+                  <div class="h-10 md:h-12 w-10 md:w-12 overflow-hidden rounded-full">
+                    <img src="src/images/avatar/avatar-23.png" alt="" class="w-full">
+                  </div>
+                  <div>
+                    <h6 class="text-sm md:text-base font-medium text-gray-900">Jerome Bell</h6>
+                    <p class="text-gray-600 text-xs md:text-sm">Deputy Director</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -1477,6 +1633,7 @@
   <script src="src/js/swiper-bundle.min.js"></script>
   <script src="src/js/mixitup.min.js"></script>
   <script src='src/js/any-image-comparison-slider.min.js'></script>
+  <script src='src/js/isotope-layout@3.0.6_dist_isotope.pkgd.min.js'></script>
   <script src="src/js/script.js"></script>
 </body>
 </html>
