--- a/pages/saas3.html
+++ b/pages/saas3.html
@@ -1021,6 +1021,7 @@
   <script src="../src/js/swiper-bundle.min.js"></script>
   <script src="../src/js/mixitup.min.js"></script>
   <script src='../src/js/any-image-comparison-slider.min.js'></script>
+  <script src='../src/js/isotope-layout@3.0.6_dist_isotope.pkgd.min.js'></script>
   <script src="../src/js/script.js"></script>
 </body>
 </html>
