it, medical page added

--- a/pages/mobile-app1.html
+++ b/pages/mobile-app1.html
@@ -1713,6 +1713,8 @@
   <script src="../src/js/mixitup.min.js"></script>
   <script src='../src/js/any-image-comparison-slider.min.js'></script>
   <script src='../src/js/isotope-layout@3.0.6_dist_isotope.pkgd.min.js'></script>
+  <script src="../src/js/jquery.waypoints.min.js"></script>
+  <script src="../src/js/jquery.counterup.min.js"></script>
   <script src="../src/js/script.js"></script>
 </body>
 </html>
