--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- menu -->
         <ul class="flex items-center gap-6">
           <li class="py-5 cursor-pointer group menu-li">
-            <button type="button" class="text-base font-medium text-gray-600 flex items-center gap-1">
+            <button type="button" class="text-base font-medium text-secondary flex items-center gap-1">
               Landings
               <i class="ph ph-caret-down"></i>
             </button>
@@ -37,39 +37,39 @@
             <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-[calc(100%-2px)] bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
               <ul class="space-y-6 p-6">
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Mobile App Showcase v.1</a>
+                  <a href="pages/mobile-app1.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Mobile App Showcase v.1</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Mobile App Showcase v.2</a>
+                  <a href="pages/mobile-app2.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Mobile App Showcase v.2</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">SaaS v.1</a>
+                  <a href="pages/saas1.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">SaaS v.1</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">SaaS v.2</a>
+                  <a href="pages/saas2.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">SaaS v.2</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">SaaS v.3</a>
+                  <a href="pages/saas3.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">SaaS v.3</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Financial Consulting</a>
+                  <a href="pages/financial.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Financial Consulting</a>
                 </li>
               </ul>
               <ul class="space-y-6 p-6">
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Medical</a>
+                  <a href="pages/medical.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Medical</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">IT Company</a>
+                  <a href="pages/it-software.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">IT Company</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Conference</a>
+                  <a href="pages/travel-agency.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Travel Agency</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Digital Agency</a>
+                  <a href="pages/digital-agency.html" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Digital Agency</a>
                 </li>
                 <li>
-                  <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Blog Homepage</a>
+                  <a href="index.html" class="text-sm text-secondary transition-all duration-300 hover:text-secondary">Blog Homepage</a>
                 </li>
                 <li>
                   <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Online Courses</a>
@@ -279,7 +279,7 @@
       <div class="bg-black/50 h-screen w-screen absolute inset-0 z-10 mobile-menu-overlay"></div>
       <div class="max-w-[400px] w-full bg-white h-screen absolute top-0 right-0 translate-x-full z-20 shadow-xl overflow-y-auto transition-all duration-300 mobile-menu">
         <div class="flex items-center justify-between py-3 px-4 bg-white border-b border-gray-300 sticky top-0 w-full z-20">
-          <a href="#">
+          <a href="index.html">
             <img src="src/images/logo.png" alt="" class="w-full">
           </a>
 
@@ -296,37 +296,37 @@
             </button>
             <ul class="space-y-3 pl-6 mt-4 border-l border-gray-300 mobile-sub-list">
               <li>
-                <a href="#" class="text-sm text-gray-700">Mobile App Showcase v.1</a>
+                <a href="pages/mobile-app1.html" class="text-sm text-gray-700">Mobile App Showcase v.1</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">Mobile App Showcase v.2</a>
+                <a href="pages/mobile-app2.html" class="text-sm text-gray-700">Mobile App Showcase v.2</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">SaaS v.1</a>
+                <a href="pages/saas1.html" class="text-sm text-gray-700">SaaS v.1</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">SaaS v.2</a>
+                <a href="pages/saas2.html" class="text-sm text-gray-700">SaaS v.2</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">SaaS v.3</a>
+                <a href="pages/saas3.html" class="text-sm text-gray-700">SaaS v.3</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">Financial Consulting</a>
+                <a href="pages/financial.html" class="text-sm text-gray-700">Financial Consulting</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">Medical</a>
+                <a href="pages/medical.html" class="text-sm text-gray-700">Medical</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">IT Company</a>
+                <a href="pages/it-software.html" class="text-sm text-gray-700">IT Company</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">Conference</a>
+                <a href="pages/travel-agency.html" class="text-sm text-gray-700">Travel Agency</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">Digital Agency</a>
+                <a href="pages/digital-agency.html" class="text-sm text-gray-700">Digital Agency</a>
               </li>
               <li>
-                <a href="#" class="text-sm text-gray-700">Blog Homepage</a>
+                <a href="index.html" class="text-sm text-secondary">Blog Homepage</a>
               </li>
               <li>
                 <a href="#" class="text-sm text-gray-700">Online Courses</a>
@@ -1414,7 +1414,7 @@
         </div>
 
         <div class="text-center mt-10">
-          <button type="button" class="bg-secondary text-white py-3 px-14 rounded-lg text-sm font-semibold">See All</button>
+          <a href="#" class="inline-block bg-secondary text-white py-3 px-14 rounded-lg text-sm font-semibold">See All</a>
         </div>
       </div>
     </section>
@@ -1442,40 +1442,40 @@
             <h4 class="text-[#FEFFFF] text-sm md:text-base font-bold pb-4 md:pb-6 font-sfBold">Home</h4>
             <ul class="space-y-3 md:space-y-4">
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Mobile App Showcase 1</a>
+                <a href="pages/mobile-app1.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Mobile App Showcase 1</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Mobile App Showcase 2</a>
+                <a href="pages/mobile-app2.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Mobile App Showcase 2</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">SaaS 1</a>
+                <a href="pages/saas1.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">SaaS 1</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">SaaS 2</a>
+                <a href="pages/saas2.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">SaaS 2</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">SaaS 3</a>
+                <a href="pages/saas3.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">SaaS 3</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Financial Consulting</a>
+                <a href="pages/financial.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Financial Consulting</a>
               </li>
               <li>
                 <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Online Courses</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Medical</a>
+                <a href="pages/medical.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Medical</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">IT (Software) Company</a>
+                <a href="pages/it-software.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">IT (Software) Company</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Conference</a>
+                <a href="pages/travel-agency.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Travel Agency</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Digital Agency</a>
+                <a href="pages/digital-agency.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Digital Agency</a>
               </li>
               <li>
-                <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Blog Homepage</a>
+                <a href="index.html" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Blog Homepage</a>
               </li>
               <li>
                 <a href="#" class="text-[#A2A9B0] text-sm md:text-base font-medium transition-all duration-300 hover:text-secondary">Portfolio Grid View</a>
