--- a/pages/financial.html
+++ b/pages/financial.html
@@ -794,7 +794,7 @@
             </div>
             <div>
               <label for="city" class="block text-sm font-medium text-gray-900 pb-4">City</label>
-              <select id="position" class="w-full h-10 rounded-md bg-white border border-gray-300 text-sm text-gray-700 px-3 appearance-none outline-none focus:outline-none cursor-pointer transition-all duration-200 hover:border-secondary focus:border-secondary">
+              <select id="city" class="w-full h-10 rounded-md bg-white border border-gray-300 text-sm text-gray-700 px-3 appearance-none outline-none focus:outline-none cursor-pointer transition-all duration-200 hover:border-secondary focus:border-secondary">
                 <option value="0">Choose the city</option>
                 <option value="1">Dhaka</option>
                 <option value="2">Chattogram</option>
@@ -823,7 +823,7 @@
             </div>
             <div>
               <label for="people" class="block text-sm font-medium text-gray-900 pb-4">People in company</label>
-              <select id="position" class="w-full h-10 rounded-md bg-white border border-gray-300 text-sm text-gray-700 px-3 appearance-none outline-none focus:outline-none cursor-pointer transition-all duration-200 hover:border-secondary focus:border-secondary">
+              <select id="people" class="w-full h-10 rounded-md bg-white border border-gray-300 text-sm text-gray-700 px-3 appearance-none outline-none focus:outline-none cursor-pointer transition-all duration-200 hover:border-secondary focus:border-secondary">
                 <option value="1">0-10</option>
                 <option value="2">11-20</option>
                 <option value="3">21-30</option>
