--- a/pages/medical.html
+++ b/pages/medical.html
@@ -999,7 +999,7 @@
             <!-- item 1 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-1.png" class="w-full" />
+                <img src="../src/images/medical/client-1.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">William Smith</p>
             </div>
@@ -1007,7 +1007,7 @@
             <!-- item 2 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-2.png" class="w-full" />
+                <img src="../src/images/medical/client-2.png" class="w-full" alt=""/>
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Leanne Graham</p>
             </div>
@@ -1015,7 +1015,7 @@
             <!-- item 3 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-3.png" class="w-full" />
+                <img src="../src/images/medical/client-3.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Ervin Howell</p>
             </div>
@@ -1023,7 +1023,7 @@
             <!-- item 4 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-4.png" class="w-full" />
+                <img src="../src/images/medical/client-4.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Samantha</p>
             </div>
@@ -1031,7 +1031,7 @@
             <!-- item 5 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-5.png" class="w-full" />
+                <img src="../src/images/medical/client-5.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Patricia</p>
             </div>
@@ -1039,7 +1039,7 @@
             <!-- item 6 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-4.png" class="w-full" />
+                <img src="../src/images/medical/client-4.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Chelsey Dietrich</p>
             </div>
@@ -1047,7 +1047,7 @@
             <!-- item 7 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-3.png" class="w-full" />
+                <img src="../src/images/medical/client-3.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Kurtis Weissnat</p>
             </div>
@@ -1055,7 +1055,7 @@
             <!-- item 8 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-2.png" class="w-full" />
+                <img src="../src/images/medical/client-2.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Glenna Reichert</p>
             </div>
@@ -1063,7 +1063,7 @@
             <!-- item 9 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-1.png" class="w-full" />
+                <img src="../src/images/medical/client-1.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">Delphine</p>
             </div>
@@ -1071,7 +1071,7 @@
             <!-- item 10 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-5.png" class="w-full" />
+                <img src="../src/images/medical/client-5.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">William Parker</p>
             </div>
@@ -1079,7 +1079,7 @@
             <!-- item 11 -->
             <div class="swiper-slide text-center flex flex-col items-center">
               <div class="h-12 lg:h-[60px] w-12 lg:w-[60px] rounded-full overflow-hidden mx-auto mt-3 lg:mt-4">
-                <img src="../src/images/medical/client-4.png" class="w-full" />
+                <img src="../src/images/medical/client-4.png" class="w-full" alt="" />
               </div>
               <p class="text-lg lg:text-[22px] font-bold font-sfBold text-[#333] pt-5 whitespace-nowrap">William Parker</p>
             </div>
