--- a/pages/mobile-app1.html
+++ b/pages/mobile-app1.html
@@ -1443,12 +1443,12 @@
         <div class="bg-area py-11 xl:py-16 px-2 sm:px-6 xl:px-24 rounded-xl overflow-hidden shadow-[0px_26px_43px_0px_rgba(0,0,0,0.24)]">
           <h2 class="max-w-[315px] text-xl lg:text-[28px] lg:leading-10 font-bold font-sfBold text-gray-800">Subscribe, be aware of the latest news</h2>
           <form action="#">
-            <label class="flex items-center my-6 max-w-[545px] w-full bg-white border-l-4 border-primary-900 rounded-tr-md rounded-br-md shadow-[0px_10px_16px_0px_rgba(0,0,0,0.20)]">
+            <div class="flex items-center my-6 max-w-[545px] w-full bg-white border-l-4 border-primary-900 rounded-tr-md rounded-br-md shadow-[0px_10px_16px_0px_rgba(0,0,0,0.20)]">
               <input type="email" placeholder="Your e-mail address" class="h-12 lg:h-14 w-full px-5 text-base text-gray-900 outline-none placeholder:text-base placeholder:text-gray-600">
               <button type="submit" class="shrink-0 h-12 lg:h-14 w-12 lg:w-14 flex items-center justify-center">
                 <img src="../src/images/icons/long-arrow.svg" alt="">
               </button>
-            </label>
+            </div>
           </form>
           <p class="text-xs text-gray-800">* we promise never send you spam</p>
         </div>
